Fixed overlap and alignment with slideshow

--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -4,6 +4,7 @@
 	height: 30vh;
 	width: 25vw;
 	margin: 0 auto;
+	right: 3.3%;
 }
 
 .slide {
