--- a/css/styles.css
+++ b/css/styles.css
@@ -67,3 +67,7 @@ header div a {
 #foot {
 	margin-left: 2%;
 }
+
+#indexHead {
+	padding-bottom: 5%;
+}
